# libnetpaxos

./: .gitignore  CMakeLists.txt  README.md  install_deps.sh  libperf.conf  run-experiment.py  sample.conf  workload.txt
app/: acceptor.c  cliapp.c  client.c  coordinator.c  db.c  kv_memory.c  ldb_client.c  learner.c  leveldb_client.c  leveldb_paxos.c  leveldb_server.c  leveldb_tcp_server.c  proposer.c  server.c  simple_learner.c  tcp_client.c  toy_learner.c  udp_client.c
app/include/: application.h
include/: config.h  learner.h  message.h  proposer.h
lib/include/: acceptor.h  config.h  coordinator.h  learner.h  message.h  netpaxos_utils.h  proposer.h
lib/src/: acceptor.c  config.c  coordinator.c  learner.c  message.c  netpaxos_utils.c  proposer.c
python/: echoserver.py  perfclient.py  plot.R  tcpClient.py
scripts/: libpaxos.csv  libpaxos_10learners.csv  monitor_loads.py  plot.R  plotpaxos.py  run_experiment.py
scripts/plot_figures/: plot.R
src/: config.c  learner.c  main.c  message.c  proposer.c
